k8s/mern-stack-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-stack-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mern-stack-app
  template:
    metadata:
      labels:
        app: mern-stack-app
    spec:
      containers:
        - name: mern-stack-app
          image: webmakaka/mern-stack-the-complite-guide
