k8s/mern-stack-app-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-stack-app-svc
spec:
  selector:
    app: mern-stack-app
  ports:
    - name: mern-stack-app
      protocol: TCP
      port: 3000
      targetPort: 3000
